# scb_test

./: .gitignore  README.md  pyproject.toml
inputs/: trader.txt
src/: shares.py  shares_ram.py  trader.py
