[project]
name = "scb-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["ANN401", "D"]
extend-exclude = ["local"]

[tool.mypy]
exclude = ["local"]
